fix: menuBtn overflow

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -31,6 +31,7 @@ header {
 
   svg {
     max-height: 95%;
+    max-width: 95%;
   }
 }
 
